Локализация теперь применяется. Изменены права по-умолчанию. Изменена структура навигации.

--- a/Fide.Blazor.Server/appsettings.json
+++ b/Fide.Blazor.Server/appsettings.json
@@ -10,7 +10,7 @@
   "AllowedHosts": "*",
   "DevExpress": {
     "ExpressApp": {
-      "Languages": "en-US;",
+      "Languages": "ru-RU;en-US;",
       "ShowLanguageSwitcher": false,
       "ThemeSwitcher": {
         "DefaultItemName": "Office White",
