--- a/Fide.Blazor.Server/Fide.Blazor.Server.csproj
+++ b/Fide.Blazor.Server/Fide.Blazor.Server.csproj
@@ -10,9 +10,14 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Model.xafml" />
+    <None Remove="Model_ru-RU.xafml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Model.xafml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Model_ru-RU.xafml">
+      <DependentUpon>Model.xafml</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
