--- a/Fide/Fide.Blazor/Fide.Blazor.csproj
+++ b/Fide/Fide.Blazor/Fide.Blazor.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Minio" Version="6.0.4" />
   </ItemGroup>
 
 </Project>
