Прописана инструкция запуска контейнеров. Доработан список зависимостей сервиса анализа. Небольшие исправления.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
   aomaca:
     container_name: ${AOMACA_HOST}
     build: ./Aomaca
+    env_file: "./.env"
     networks:
     - local_net
     ports:
