Переименованы namespaces. Переделан program. Переделаны сервисы.

--- a/Fide/Fide.Blazor/appsettings.json
+++ b/Fide/Fide.Blazor/appsettings.json
@@ -1,12 +1,22 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Fide.Blazor-74127606-726e-4155-8f12-ae484fd1d53e;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=mssql;Database=Fide.Blazor;Trusted_Connection=True;MultipleActiveResultSets=true;Password=Kf91nDSf2z;User Id=sa;Trust Server Certificate=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "S3": {
+        "ServiceURL": "http://localhost:9000",
+        "AccessKey": "minioadmin",
+        "SecretKey": "minioadmin",
+        "BucketName": "filesbucket",
+        "ForcePathStyle": true
+    },
+    "Aomaca": {
+        "ServiceUrl": "http://localhost:9001"
+    },
+    "AllowedHosts": "*"
 }
