Попытка решить проблему с подключение к БД. Была решена проблема с отсутствием библиотеки libgssapi_krb5.so.2, нужно было просто использовать другой образ и Trusted_Connection=false.

--- a/Fide/Fide.Blazor/appsettings.json
+++ b/Fide/Fide.Blazor/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=mssql;Database=Fide.Blazor;Trusted_Connection=True;MultipleActiveResultSets=true;Password=Kf91nDSf2z;User Id=sa;Trust Server Certificate=True"
+        "DefaultConnection": "Server=mssql;Database=FideDB;Trusted_Connection=false;MultipleActiveResultSets=true;Password=Kf91nDSf2z;User Id=sa;Trust Server Certificate=True"
     },
     "Logging": {
         "LogLevel": {
