--- a/Fide/Fide.Blazor/appsettings.json
+++ b/Fide/Fide.Blazor/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=mssql;Database=FideDB;Trusted_Connection=false;MultipleActiveResultSets=true;Password=Kf91nDSf2z;User Id=sa;Trust Server Certificate=True"
+        "DefaultConnection": "Server=localhost,7001;Database=FideDB;Trusted_Connection=false;MultipleActiveResultSets=true;Password=Kf91nDSf2z;User Id=sa;Trust Server Certificate=True"
     },
     "Logging": {
         "LogLevel": {
