--- a/Aomaca/requirements.txt
+++ b/Aomaca/requirements.txt
@@ -1,5 +1,7 @@
 waitress==3.0.2
 flask==3.1.0
-minio==7.2.15
 Pillow==11.1.0
 tensorflow==2.18.0
+flask-cors==5.0.1
+boto3==1.34.28
+botocore==1.34.28
