--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,35 @@ jobs:
 
       - name: Run Pyflakes
         run: pyflakes Aomaca/
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install unittest-xml-reporting  # Для генерации XML-отчетов
+
+      - name: Run unit tests
+        run: |
+          python -m unittest discover -s tests -p "test_*.py" -v
+
+      - name: Generate test report
+        if: always()
+        run: |
+          python -m xmlrunner discover -s tests -p "test_*.py" -o test-results
+          
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: unit-test-results
+          path: test-results/
