--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,22 +31,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install unittest-xml-reporting  # Для генерации XML-отчетов
 
       - name: Run unit tests
         run: |
-          python -m unittest discover -s tests -p "test_*.py" -v
-
-      - name: Generate test report
-        if: always()
-        run: |
-          python -m unittest discover -s tests -p "test_*.py" -v
+          python -m unittest discover -s Aomaca/tests -p "*_test.py" -v
           
       - name: Upload test results
         if: always()
