--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r Aomaca/requirements_test.txt
+          pip install -r Aomaca/requirements.txt
 
       - name: Run unit tests
         run: |
