--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          python -m unittest discover -s Aomaca/src -p "*_test.py" -v
+          python -m unittest discover -s Aomaca/src -p "test_*.py" -v
           
       - name: Upload test results
         if: always()
