--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Run Pyflakes
         run: pyflakes Aomaca/
   test:
+    needs: lint
     runs-on: ubuntu-latest
 
     steps:
@@ -36,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r Aomaca/requirements.txt
+          pip install -r Aomaca/requirements_test.txt
 
       - name: Run unit tests
         run: |
