Исправлены скрипты github actions

--- a/.github/workflows/aomaca.yml
+++ b/.github/workflows/aomaca.yml
@@ -3,8 +3,12 @@ name: Aomaca Jobs
 on:
   push:
     branches: [ master ]
+    paths:
+    - Aomaca/**
   pull_request:
     branches: [ master ]
+    paths:
+    - Aomaca/**
 
 jobs:
   lint:
